monitoring/overlays/osaka0/ingress-health/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ingress-health-global
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: global
spec:
  virtualhost:
    fqdn: ingress-health-global.monitoring.osaka0.cybozu-ne.co
    tls:
      secretName: ingress-health-global-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: ingress-health-http
          port: 80
      permitInsecure: true
      timeoutPolicy:
        response: 2m
        idle: 5m
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ingress-health-bastion
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: bastion
spec:
  virtualhost:
    fqdn: ingress-health-bastion.monitoring.osaka0.cybozu-ne.co
    tls:
      secretName: ingress-health-bastion-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: ingress-health-http
          port: 80
      permitInsecure: true
      timeoutPolicy:
        response: 2m
        idle: 5m
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ingress-health-forest
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: forest
spec:
  virtualhost:
    fqdn: ingress-health-forest.monitoring.osaka0.cybozu-ne.co
    tls:
      secretName: ingress-health-forest-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: ingress-health-http
          port: 80
      permitInsecure: true
      timeoutPolicy:
        response: 2m
        idle: 5m
